# Rain

./: .gitattributes  .gitignore  AGENTS.md  PR_DESCRIPTION.md  README.md  analysis_options.yaml  melos.yaml  opencode.json  pubspec.yaml  test_supabase.ps1  test_tables.ps1
.dart_tool/: package_config.json  package_graph.json
.github/workflows/: build-artifacts.yml  ci.yml  (+5 more)
apps/rain/rust/: Cargo.toml
apps/rain/rust/src/: framing.rs  frb_generated.rs  lib.rs  state.rs  test_support.rs
apps/rain/rust/src/api/: iroh_transport.rs  mod.rs
apps/rain/rust/tests/: endpoint_lifecycle.rs  framing.rs  two_endpoint_loopback.rs
docs/: app-context-nontechnical.md  github-ci-cd.md  stable-test-build.md
final product/: README.txt
plans/: dependency-graph.json  open-code-integration-plan.md  open-code-integration-pr-template.md  phase1-architecture.md  phase1-checklist.md  phase2-runner-output.json  phase2-unit-01-planner.md  phase2-unit-02-architect.md  phase2-unit-decomposition.md  phase3-integration.md  phase3-runner-output.json  phase4-runner-output.json  phase4-verification.md  phase5-delivery.md  phase5-pr-body.md
scripts/: build_release.ps1  build_stable_test_pair.ps1  ci_run_firebase_emulators.ps1  ci_run_firebase_emulators.sh  clean_workspace.ps1  flutter_analyze.ps1  generate_rain_platform_icons.ps1  phase2-runner.js  phase3-runner.js  phase4-runner.js  phase5-runner.js  sync_app_icons.ps1  test_all.ps1  validate_opencode.js  validate_phase4_output.js
test_extract/: firebase_remote_config_plugin.lib
test_run/: firebase_database_plugin.lib  rain.lib
(+370 files in other folders)
